--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,29 @@
 </head>
 <body>
 
-<%= yield %>
+
+<div id="container"> 
+	<div id="header">
+		<%= link_to "DBHIV Q&A", root_path %>
+	</div><!-- end header -->
+	<div id="nav">
+		<ul>
+			<li><%= link_to "Home", root_path %></li>
+		</ul>
+	</div> <!-- end nav -->
+	<div id="content">
+
+		<% flash.each do |key, value| %>
+			<p id="message"><%= value %></p>
+		<% end %>
+
+		<%= yield %>
+	</div> <!-- end content -->
+	
+	<div id="footer">
+		&copy; DBHIV Q&A <%= Date.today.year %>
+	</div> <!-- end footer -->
+</div><!-- end conatiner -->
 
 </body>
 </html>
