--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,13 @@
 	<div id="nav">
 		<ul>
 			<li><%= link_to "Home", root_path %></li>
+			<% if logged_in? %>
+				<li><%= link_to "Logout(#{current_user.username})", logout_path, method: :delete %></li>
+			<% else %>
+				<li><%= link_to "Register", register_path %></li>
+				<li><%= link_to "Login", login_path %></li>
+			<% end %>
+			
 		</ul>
 	</div> <!-- end nav -->
 	<div id="content">
