--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -7,3 +7,15 @@
 		<p>Please login to ask or answer questions</p>
 	<% end %>
 </div><!-- end ask -->
+
+<div id="questions">
+	<h2>Unsolved Questions</h2>
+	<% if @questions.any? %>
+		<ul>
+			<%= render @questions %>
+		</ul>
+		<%= will_paginate %>
+	<% else %>
+		<p>No Questions have been asked</p>
+	<% end %>
+</div> <!-- end questions -->
