--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -5,4 +5,6 @@
 	<%= display_solved(question) %>
 		- <%= link_to "Edit", edit_question_path(question) %>
 	<% end %>
+
+	- (<%= pluralize(question.answers.count, 'answer') %>)
 </li>
