--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,9 @@
 <div id="container"> 
 	<div id="header">
 		<%= link_to "DBHIV Q&A", root_path %>
+		<div id="searchbar">
+			<%= render 'common/search_form' %>
+		</div><!-- end searchbar -->
 	</div><!-- end header -->
 	<div id="nav">
 		<ul>
