Changed question and answer bodies to type text in models and textareas in views

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,21 @@
  *= require_self
  *= require_tree .
  */
+
+
+
+.checkbox{
+	color: blue;
+	display: inline;
+}
+.social{
+	display: inline;
+
+}
+.social-buttons{
+	text-align: left;
+	list-style: none;
+}
+.navbarcontent{
+	float:right;
+}
