--- a/app/assets/stylesheets/answers.css.scss
+++ b/app/assets/stylesheets/answers.css.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the Answers controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+li{
+	list-style: none;
+	border-bottom:1px solid #CCC;
+}
+.username{
+	font-weight: bold ;
+}
