--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,47 +1,98 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title><%= yield(:title)%></title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <title><%= content_for?(:title) ? yield(:title) : "Dbhiv" %></title>
+    <%= csrf_meta_tags %>
 
-<div id="container"> 
-	<div id="header">
-		<%= link_to "DBHIV Q&A", root_path %>
-		<div id="searchbar">
-			<%= render 'common/search_form' %>
-		</div><!-- end searchbar -->
-	</div><!-- end header -->
-	<div id="nav">
-		<ul>
-			<li><%= link_to "Home", root_path %></li>
-			<% if logged_in? %>
-			<li><%= link_to "Your Q's", your_questions_path %></li>
-				<li><%= link_to "Logout(#{current_user.username})", logout_path, method: :delete %></li>
-			<% else %>
-				<li><%= link_to "Register", register_path %></li>
-				<li><%= link_to "Login", login_path %></li>
-			<% end %>
-			
-		</ul>
-	</div> <!-- end nav -->
-	<div id="content">
+    <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
+    <!--[if lt IE 9]>
+      <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js" type="text/javascript"></script>
+    <![endif]-->
 
-		<% flash.each do |key, value| %>
-			<p id="message"><%= value %></p>
-		<% end %>
+    <%= stylesheet_link_tag "application", :media => "all" %>
 
-		<%= yield %>
-	</div> <!-- end content -->
-	
-	<div id="footer">
-		&copy; DBHIV Q&A <%= Date.today.year %>
-	</div> <!-- end footer -->
-</div><!-- end conatiner -->
+    <!-- For third-generation iPad with high-resolution Retina display: -->
+    <!-- Size should be 144 x 144 pixels -->
+    <%= favicon_link_tag 'apple-touch-icon-144x144-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '144x144' %>
 
-</body>
+    <!-- For iPhone with high-resolution Retina display: -->
+    <!-- Size should be 114 x 114 pixels -->
+    <%= favicon_link_tag 'apple-touch-icon-114x114-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '114x114' %>
+
+    <!-- For first- and second-generation iPad: -->
+    <!-- Size should be 72 x 72 pixels -->
+    <%= favicon_link_tag 'apple-touch-icon-72x72-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '72x72' %>
+
+    <!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
+    <!-- Size should be 57 x 57 pixels -->
+    <%= favicon_link_tag 'apple-touch-icon-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png' %>
+
+    <!-- For all other devices -->
+    <!-- Size should be 32 x 32 pixels -->
+    <%= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
+
+    <%= javascript_include_tag "application" %>
+  </head>
+  <body>
+
+    <div class="navbar navbar-fluid-top">
+      <div class="navbar-inner">
+        <div class="container-fluid">
+          <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <div class="brand coName" ><%= link_to "Dbhiv", questions_path%></div>
+          <div class="container-fluid nav-collapse">
+            
+            <ul class="nav navbarcontent">
+              <% if logged_in? %>
+                <li class = "pull-left"><%= link_to "Your Q's", your_questions_path %></li>
+                <li class = "pull-left"><%= link_to "Logout(#{current_user.username})", logout_path, method: :delete %></li>
+              <% else %>
+                <li class = "pull-right"><%= link_to "Register", register_path %></li>
+                <li class = "pull-right"><%= link_to "Login", login_path %></li>
+              <% end %>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
+    </div>
+
+    <div class="container-fluid">
+      <div class="row-fluid">
+        <div class="span3">
+          <img src="/assets/child.jpeg" alt="childkdf">
+        </div>
+        <div class="span9">
+          <%= bootstrap_flash %>
+          <div >
+              <%= render 'common/search_form' %>
+            </div><!-- end searchbar -->
+          <%= yield %>
+        </div>
+      </div><!--/row-->
+
+      <footer class="page-footer navbar navbar-fixed-bottom">
+        <div class="container">
+          <ul class="social">
+            <!-- <li class="social-buttons social">
+              <iframe id="twitter-widget-1" scrolling="no" frameborder="0" allowtransparency="true" src="http://platform.twitter.com/widgets/follow_button.1384994725.html#_=1386799988348&amp;id=twitter-widget-1&amp;lang=en&amp;screen_name=twbootstrap&amp;show_count=true&amp;show_screen_name=true&amp;size=m" class="twitter-follow-button twitter-follow-button" title="Twitter Follow Button" data-twttr-rendered="true" style="width: 237px; height: 20px;"></iframe>
+            </li>
+            <li class="social-buttons social">
+              <iframe id="twitter-widget-0" scrolling="no" frameborder="0" allowtransparency="true" src="http://platform.twitter.com/widgets/tweet_button.1384994725.html#_=1386799988336&amp;count=horizontal&amp;id=twitter-widget-0&amp;lang=en&amp;original_referer=http%3A%2F%2Flocalhost%3A9001%2Fgetting-started%2F&amp;related=mdo%3ACreator%20of%20Twitter%20Bootstrap&amp;size=m&amp;text=Getting%20started%20%C2%B7%20Bootstrap&amp;url=http%3A%2F%2Fgetbootstrap.com%2F&amp;via=twbootstrap" class="twitter-share-button twitter-tweet-button twitter-count-horizontal" title="Twitter Tweet Button" data-twttr-rendered="true" style="width: 107px; height: 20px;"></iframe>
+            </li> -->
+          </ul>
+          <p>&copy; DbHiv Company 2013</p>
+        </div>
+      </footer>
+
+    </div> <!-- /container -->
+
+  </body>
 </html>
