--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -6,5 +6,5 @@
 		- <%= link_to "Edit", edit_question_path(question) %>
 	<% end %>
 
-	- (<%= pluralize(question.answers.count, 'answer') %>)
+	- (<%= pluralize(question.answers.count, 'answer') %>) - Asked <%= time_ago_in_words(question.created_at) %> ago
 </li>
