--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,14 +1,14 @@
 <% provide(:title, "View Question") %>
 
-<h1>
+<h2>
 	<%= @question.user.username.capitalize %> asks:
-</h1>
+</h2>
 
 <p>
 	<%= @question.body %>
 </p>
 <div id="answers">
-	<h2>Answers</h2>
+	<h3>Answers</h3>
 
 	<% if @question.answers.any? %>
 		<ul>
@@ -22,7 +22,7 @@
 </div> <!-- answers end -->
 <div id="post-answer">
 	<p>
-		<h2>Answer this question</h2>
+		<h3>Answer this question</h3>
 
 		<% if logged_in? %>
 			<%= render 'answers/answer_form' %>
@@ -31,3 +31,8 @@
 		<% end %>
 	</p>
 </div><!-- end post-answer -->
+
+<div>
+	<p><%= link_to "Back", questions_path %> </p>
+</div>
+
